music-progress color change

--- a/css/main.css
+++ b/css/main.css
@@ -297,7 +297,7 @@ body {
   margin: 0 auto;
   height: 6px;
   border-radius: 10px;
-  background-color: #dddddd;
+  background-color: #37306B;
   cursor: pointer;
 }
 
